<resources>
    <string name="app_name">Github User</string>

    <string name="user_name">Name</string>
    <string name="user_username">Username</string>
    <string name="user_company">Company</string>
    <string name="user_location">Location</string>
    <string name="user_following">Following</string>
    <string name="user_followers">Followers</string>
    <string name="user_repository">Repository</string>
    <string name="search">Search user</string>
    <string name="desc_not_found">Not Found Icon</string>
    <string name="desc_search">Start Search Icon</string>
    <string name="desc_github">Github Logo</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
</resources>